# VC-Buddy-MCP

./: LICENSE  Makefile  PR提交说明-DeepSeek文本总结功能集成.md  README.md  TODO.md  deepseek.md  pyproject.toml  test_style_system.py  test_window_geometry.py
.cursor/rules/: project-structure.mdc  unit-tests.mdc  vibe-coding-buddy.mdc
buddy/: cli.py
buddy/client/: __init__.py  test.py
buddy/core/: __init__.py  analytics.py  deepseek_client.py  prompt_manager.py  version.py
buddy/prompts/: deepseek.md
buddy/server/: main.py
buddy/tests/: test_analytics.py  test_analytics_platform.py  test_prompt_manager.py  test_todo_parser.py
buddy/ui/: README_CONFIG.md  answer_box.py  answer_box_qml.py  config.json.example  config.py  run_qml.py  streaming_voice_recorder.py  style_manager.py  todo_parser.py  voice_recorder.py  voice_settings_dialog.py
buddy/ui/qml/: Main.qml  SettingsDialog.qml  Theme.qml  TodoItemDelegate.qml  VoiceSettingsDialog.qml  qmldir  styles.qss
docs/: ANALYTICS_IMPLEMENTATION.md  ProjectStructure.md  README_CONFIG.md  STREAMING_VOICE_INPUT.md  VOICE_FIXES.md  prd.md
tools/: README_VOICE_RECORDER.md  mcp_config_generator.py  settings_dialog.py  voice_recorder_test.py  voice_test_unified.py
